--- a/java/pom.xml
+++ b/java/pom.xml
@@ -95,19 +95,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.google.cloud</groupId>
-      <artifactId>gapic-google-cloud-shopping-css-v1-java</artifactId>
-      <version>0.0.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.api.grpc</groupId>
-      <artifactId>proto-google-cloud-shopping-css-v1-java</artifactId>
-      <version>0.0.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.api.grpc</groupId>
-      <artifactId>grpc-google-cloud-shopping-css-v1-java</artifactId>
-      <version>0.0.0-SNAPSHOT</version>
+      <groupId>com.google.shopping</groupId>
+      <artifactId>google-shopping-css</artifactId>
+      <version>0.24.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.protobuf</groupId>
@@ -117,17 +107,17 @@
     <dependency>
       <groupId>com.google.api</groupId>
       <artifactId>gax</artifactId>
-      <version>2.30.0</version>
+      <version>2.59.1</version>
     </dependency>
     <dependency>
       <groupId>com.google.auth</groupId>
       <artifactId>google-auth-library-oauth2-http</artifactId>
-      <version>1.9.0</version>
+      <version>1.31.0</version>
     </dependency>
     <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-shared-dependencies</artifactId>
-        <version>2.6.0</version>
+        <version>3.41.1</version>
         <type>pom</type>
         <scope>import</scope>
     </dependency>
